fixed spacing issues, added client text to button

--- a/widget-from-scratch/intelliswipe-demo.css
+++ b/widget-from-scratch/intelliswipe-demo.css
@@ -7,6 +7,10 @@
 
 .right-button {
     background-color: red;
+    font-size: 20px;
+    padding-top:20px;
+    float: right;
+    margin-left: 5px;    
 }
 
 .left-button {
@@ -17,7 +21,7 @@ li {
     background-color: white;    
     border: solid 1px;
     border-color: gray;
-    margin-top:10px;
-    margin-bottom:10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 
 }
